--- a/.github/workflows/update-tags.yml
+++ b/.github/workflows/update-tags.yml
@@ -85,14 +85,19 @@ jobs:
       uses: actions/checkout@v4
       with:
         fetch-depth: 0
+    - name: 'Install GitVersion'
+      uses: gittools/actions/gitversion/setup@v0
+      with:
+        versionSpec: '5.x'
+        includePrerelease: 'false'
+        preferLatestVersion: 'true'
+
     - name: GitVersion
       id: gitversion
-      uses: gittools/actions/gitversion/execute@v1.1.1
+      uses: gittools/actions/gitversion/execute@v0
       with:
-        git-tool-latest: 'true'
-        use-config-file: 'true'
-        pre-release: 'false'
-        additional-arguments: '-b ${{ github.event.pull_request.head.ref }} /overrideconfig tag-prefix=${{ matrix.element.name }}-v'
+        useConfigFile: 'true'
+        additionalArguments: '-b ${{ github.event.pull_request.head.ref }} /overrideconfig tag-prefix=${{ matrix.element.name }}-v'
 
     - name: Output element
       id: output-element
