--- a/.github/workflows/update-tags.yml
+++ b/.github/workflows/update-tags.yml
@@ -1,5 +1,5 @@
 name: 'Update Tags'
-run-name: 'Build #${{ github.run_number }} - PR: ${{ github.event.pull_request.title }}'
+run-name: 'PR: ${{ github.event.pull_request.title }}'
 
 on:
   pull_request:
@@ -108,18 +108,18 @@ jobs:
         Write-Host "new version=${{ steps.gitversion.outputs.majorMinorPatch }}"
 
     - name: Create Git Tag
-      uses: actions/github-script@v4
-      with:
-        github-token: ${{ secrets.GITHUB_TOKEN }}
-        script: |
-          const tag = '${{ matrix.element.name }}-v${{ steps.gitversion.outputs.majorMinorPatch }}';
-          const ref = process.env.GITHUB_REF;
-          const sha = process.env.GITHUB_SHA;
-          const octokit = github.getOctokit(process.env.GITHUB_TOKEN);
-          octokit.git.createRef({
-            owner: context.repo.owner,
-            repo: context.repo.repo,
-            ref: `refs/tags/${tag}`,
-            sha: sha
-          });
-          console.log(`Created tag ${tag} for ref ${ref}`);
+      run: |
+        const tag = '${{ matrix.element.name }}-v${{ steps.gitversion.outputs.majorMinorPatch }}';
+        const ref = process.env.GITHUB_REF;
+        const sha = process.env.GITHUB_SHA;
+        const { Octokit } = require("@octokit/rest");
+        const octokit = new Octokit({ auth: process.env.GITHUB_TOKEN });
+        octokit.git.createRef({
+          owner: context.repo.owner,
+          repo: context.repo.repo,
+          ref: `refs/tags/${tag}`,
+          sha: sha
+        });
+        console.log(`Created tag ${tag} for ref ${ref}`);
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
