--- a/.github/workflows/update-tags.yml
+++ b/.github/workflows/update-tags.yml
@@ -4,6 +4,11 @@ run-name: ':bookmark:New Tag from PR #${{ github.event.pull_request.number }} - 
 on:
   pull_request:
     types: [closed]
+    branches:
+      - main
+  push:
+    branches:
+      - release/*
 
 permissions:
   id-token: write
