--- a/.github/workflows/update-tags.yml
+++ b/.github/workflows/update-tags.yml
@@ -70,7 +70,7 @@ jobs:
         elseif ($elementsToBuild.Count -eq 0) {
           "# :zap: NO NEW TAGS `r`n" | Out-File -FilePath $env:GITHUB_STEP_SUMMARY -Append
           "## No files changed matched the paths defined in the configuration file. `r`n" | Out-File -FilePath $env:GITHUB_STEP_SUMMARY -Append
-          "All files changed: ${{ steps.changed-files.outputs.all_changed_files }} `r`n" | Out-File -FilePath $env:GITHUB_STEP_SUMMARY -Append
+          "All files changed: ${{ github.event.pull_request.changed_files }} `r`n" | Out-File -FilePath $env:GITHUB_STEP_SUMMARY -Append
         }
         else {
           $elementsToBuildJson = $elementsToBuild | ConvertTo-Json -Compress
