--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -1,5 +1,5 @@
 name: 'Create/Update Release'
-run-name: 'Push to release branch'
+run-name: 'Push to release branch ${{ github.ref_name }}'
 
 on:
   push:
@@ -32,7 +32,7 @@ jobs:
 
         # Check for a match
         $matches = ($tags -match "^[vV]?$releaseBranchVersion([.][0-9]+)?$") -replace "v",""
-        $matchFound = $false
+        $matchFound = $matches.Count -gt 0
 
         # Output result
         if ($matchFound) {
@@ -45,9 +45,8 @@ jobs:
           "newReleaseVersion=$major.$minor.$patch" >> $env:GITHUB_OUTPUT
         }
         else {
-          Write-Output "No matching tag found for $releaseBranchVersion. Creating a new release for release branch"
-
-          "newReleaseVersion=$major.$minor.$patch" >> $env:GITHUB_OUTPUT
+          Write-Output "No matching tag found for $releaseBranchVersion. Creating a new release for release branch..."
+          "newReleaseVersion=$releaseBranchVersion" >> $env:GITHUB_OUTPUT
         }
 
     - name: Get tags of elements
@@ -75,12 +74,11 @@ jobs:
           # Add code to get tag from commit, match specific element
           $tag = git tag --points-at $newestCommit | Select-String "$($element.name)-v*" 
           Write-Debug "Tag: $tag"
-          $tagBody += " Element: $($element.name) `r`n"
-          $tagBody += "   Latest Tag: $tag `r`n"
-          $tagBody += "   Latest Commit: $newestCommit `r`n`r`n"
+          $tagBody += "#### Element: $($element.name) `r`n"
+          $tagBody += " Latest Tag: $tag `r`n"
+          $tagBody += " Latest Commit: $newestCommit `r`n`r`n"
         }
-        write-output "$tagBody"
-        "tagBody=$tagBody" >> $env:GITHUB_OUTPUT
+        write-output $tagBody >> "tagBody.txt"
         
 
         
@@ -94,7 +92,7 @@ jobs:
         release_name: 'v${{ steps.get-release-tag.outputs.newReleaseVersion }}'
         draft: false
         prerelease: false
-        body: ${{ steps.get-associated-tags.outputs.tagBody }}
+        body_path: tagBody.txt
 
     - name: Output to Job Summary
       id: output-element
@@ -103,4 +101,4 @@ jobs:
         Write-Host "New Release/Tag: v${{ steps.get-release-tag.outputs.newReleaseVersion }}"
         "# :rocket: :bookmark: New Release/Tag: v${{ steps.get-release-tag.outputs.newReleaseVersion }} `r`n" | Out-File -FilePath $env:GITHUB_STEP_SUMMARY -Append
         "## Branch: ${{ github.ref_name }} `r`n" | Out-File -FilePath $env:GITHUB_STEP_SUMMARY -Append
-        "## Release Notes: `r`n ${{ steps.get-associated-tags.outputs.tagBody }}" | Out-File -FilePath $env:GITHUB_STEP_SUMMARY -Append
+        "## Release Notes: `r`n $(Get-Content tagBody.txt)" | Out-File -FilePath $env:GITHUB_STEP_SUMMARY -Append
