--- a/.github/workflows/hotfix-merge-validation.yml
+++ b/.github/workflows/hotfix-merge-validation.yml
@@ -14,6 +14,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0 # Necessary to fetch all history for branches and tags
+          ref: ${{ github.event.pull_request.head.ref }}
 
       - name: Check if hotfix is merged into main
         id: check-merge
