--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -85,15 +85,22 @@ jobs:
           foreach ($path in $element.path) {
             Write-Debug "  Path: $path"
             $commitHash = git log --before="$(git log -n 1 --pretty=format:'%cI')" -n 1 --pretty=format:"%H" -- $path
-            $childCommit = git log --all --pretty=format:'%H %P' | Select-String " $commitHash" | ForEach-Object { $_.ToString().Split(' ')[0] }
-            if ($newestCommit) {
-              git merge-base --is-ancestor $newestCommit $childCommit
-              if ($LASTEXITCODE -eq 0) {
+            if ($commitHash -eq git rev-parse HEAD) {
+              # If the commit hash is the same as the HEAD, then the file was added in the last commit and there won't be a tag yet
+              # So we need to get the second latest commit
+              $newestCommit = (git log --before="$(git log -n 1 --pretty=format:'%cI')" -n 2 --pretty=format:"%H" -- $path)[1]
+            }
+            else 
+              $childCommit = git log --all --pretty=format:'%H %P' | Select-String " $commitHash" | ForEach-Object { $_.ToString().Split(' ')[0] }
+              if ($newestCommit) {
+                git merge-base --is-ancestor $newestCommit $childCommit
+                if ($LASTEXITCODE -eq 0) {
+                  $newestCommit = $childCommit
+                }
+              }
+              else {
                 $newestCommit = $childCommit
               }
-            }
-            else {
-              $newestCommit = $childCommit
             }
           }
           $tag = git tag --points-at $newestCommit | Select-String "$($element.name)-v*"
